# dynamodb-explore

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
app/: Cargo.toml  api.js
app/src/: dynamodb.rs  lib.rs
app/src/components/: dynamodb_controller.rs  query_explorer.rs  query_form.rs  query_result.rs  query_toolbar.rs
src/: App.tsx  index.html  main.js  main.ts  preload.js  preload.ts  renderer.js  renderer.ts
src/app/: App.tsx  DynamoDBProvider.tsx  QueryTest.tsx  RequestNavContainer.tsx  api.ts
src/app/requests/: DataRequestProvider.tsx  requestReducer.tsx
src/components/: mod.rs  query_explorer.rs  query_form.rs  query_result.rs
src/main/: index.js
src/renderer/: index.js
src/rendererAPI/: types.ts
src/rendererAPI/dynamodb/: sendDynamoDBRequest.ts  types.ts
static/: index.html  styles.css
