[package]
name = "dynamodb-explore"
version = "0.1.0"
authors = ["Daniel McMillan <mcmillan.daniel3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3" }
yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
