[package]
name = "dynamodb-explore"
version = "0.1.0"
authors = ["Daniel McMillan <mcmillan.daniel3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3" }
wee_alloc = { version = "0.4.5", optional = true }
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
